# CNN-ANN_rust

./: .gitignore  CUDA_imp.md  Cargo.toml  README.md
docs/: architecture.md  benchmarks.md
examples/: char_transformer.rs  gpt_char.rs  gpt_shakespeare.rs  mnist_ann.rs  mnist_cnn.rs  mnist_vit.rs  xor.rs
src/: layers.rs  lib.rs  main.rs  main_vit.rs  mnist.rs  tensor.rs  transformer_train.rs
