[package]
name = "rust_ann"
version = "0.1.0"
edition = "2021"

[[example]]
name = "xor"
path = "examples/xor.rs"

[[example]]
name = "mnist_ann"
path = "examples/mnist_ann.rs"

[[example]]
name = "mnist_cnn"
path = "examples/mnist_cnn.rs"

[[example]]
name = "mnist_vit"
path = "examples/mnist_vit.rs"

[[example]]
name = "char_transformer"
path = "examples/char_transformer.rs"

[[example]]
name = "gpt_char"
path = "examples/gpt_char.rs"

[[example]]
name = "gpt_shakespeare"
path = "examples/gpt_shakespeare.rs"

[dependencies]
